--- a/_config.yml
+++ b/_config.yml
@@ -4,18 +4,22 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: Seokhee Dev
 subtitle:
 description:
-author: John Doe
-# Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
+author: Seokhee
+Support language: en, ko
 language: en
 date_format: '%Y-%m-%d'
-
+repository: "seokhee516/comments"
+comments:
+  provider:"utterances"
+utterances: "github-light"
+issue_term: "pathname"
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url: 'https://seokhee516.github.io/'
-baseurl: seokhee516
+baseurl: 
 permalink: pretty
 
 # Pagination
@@ -118,12 +122,12 @@ index_with_subtitle: false
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories/
-  #about: /about/
+  categories: /categories/
+  # about: /about/
   archives: /archives/
   tags: /tags/
-  #sitemap: /sitemap.xml
-  #commonweal: /404.html
+  # sitemap: /sitemap.xml
+  # commonweal: /404.html
 
 
 # Enable/Disable menu icons.
@@ -213,9 +217,8 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
-
+social:
+  GitHub: https://github.com/seokhee516
 
 # Social Links Icons
 # Icon Mapping:
@@ -241,7 +244,7 @@ toc:
   enable: true
 
   # Automatically add list number to toc.
-  number: true
+  number: false
 
   # If true, all words will placed on next lines if header width longer then sidebar width.
   wrap: false
