--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,9 @@ author: Seokhee
 Support language: en, ko
 language: en
 date_format: '%Y-%m-%d'
-repository: "seokhee516/comments"
-comments:
-  provider:"utterances"
-utterances: "github-light"
-issue_term: "pathname"
+utterances:
+  repo: "seokhee516/comments"
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url: 'https://seokhee516.github.io/'
