--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ Support language: en, ko
 language: en
 date_format: '%Y-%m-%d'
 utterances:
-  repo: "seokhee516/comments"
+  repo: "seokhee516/seokhee516.github.io"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
